tutorials page clean-up / file management

--- a/index/tutorials.html
+++ b/index/tutorials.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel='stylesheet' type='text/css' href='tutorials.css'>
+  <link rel='stylesheet' type='text/css' href='../css/tutorials.css'>
   <meta charset="UTF-8">
   <title>TUTORIALS</title>
 </head>
@@ -11,6 +11,6 @@
 
 
     </div>
-    <script src="tutorials.js"></script>
+    <script src="../js/tutorials.js"></script>
 </body>
 </html>
