added signup.css signup.html

--- a/signup.html
+++ b/signup.html
@@ -1,15 +1,31 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+    <link rel="stylesheet" href="signup.css">
     <title>
         SignUp Form
     </title>
 </head>
 <body>
     <form>
-        First Name: <input type="text" name="firstname">
-        Last Name: <input type="text" name="lastname"> 
-        Password: <input type="password" name="pwd">
+        <div class="">
+        <h1>
+            Sign Up Form
+        </h1>
+        </div>
+    <ul>
+        
+       <li> Who are You?
+        <select>
+            <option value="mentor">Mentor</option>
+            <option value="artist">Artist</option>
+        </select></li>
+        <li>First Name: <input type="text" name="firstname">      </li>
+    <li> Last Name: <input type="text" name="lastname"></li> 
+        <li>Email :<input type="text" name="email"></li> 
+        <li>Password: <input type="password" name="pwd"></li>
+        </ul>
     </form>
     
 </body>
