--- a/signup.html
+++ b/signup.html
@@ -15,7 +15,7 @@
         </h1>
         </div>
     <ul>
-        
+       <div class="info"> 
        <li> Who are You?
         <select>
             <option value="mentor">Mentor</option>
@@ -26,6 +26,9 @@
         <li>Email :<input type="text" name="email"></li> 
         <li>Password: <input type="password" name="pwd"></li>
         </ul>
+        <br>
+         <input type="submit" value="Submit">
+        </div> 
     </form>
     
 </body>
