updated artist page

--- a/index/ph-profile-artist-page.html
+++ b/index/ph-profile-artist-page.html
@@ -11,20 +11,14 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li>Community </li>
-                <li>Mission</li>
-                <li>Tutorials</li>
-                <li>Artist Corner</li>
-                <li>Contact us</li>
-            </ul>
+            <!-- nav code to go here -->
         </nav>
         <div></div>
     </header>
 
-    <h1>Star in the making </h1>
+    <h1>Star in the making</h1>
     <!-- artist profile here -->
-    <section class="container">
+    <section class="profile-container">
        
         <article>
             <h3>Christina Nini</h3>
