--- a/index.html
+++ b/index.html
@@ -4,36 +4,33 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel='stylesheet' type='text/css' href='css/main.css'>
-    <title>Page Title</title>
+    <title>STAR FACTOR</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-    <div class='wrap'>
+    <div class='sticky'>
         <body>
-            <div class='wrap'>
-                <div class="container">
-                    <div class="item-1 item"><strong>STAR FACTOR</strong></div>
-                    <div class="item-2 item">COMMUNITY</div>
-                    <div class="item-3 item">TUTORIALS</div>
-                    <div class="item-4 item">CONTACT US</div>
-                    <div class="item-5 item">SHINE IN</div>
+            <div class="container">
+                <div class="item-1 item"><strong><a href="index.html" id="home">STAR FACTOR</a></strong></div>
+                <div class="item-2 item"><a href="index/community.html" id="page">COMMUNITY</a></div>
+                <div class="item-3 item"><a href="index/tutorials.html" id="page">TUTORIALS</a></div>
+                <div class="item-4 item"><a href="index/contact.html" id="page">CONTACT US</a></div>
+                <div class="item-5 item"><a href="index/artist.html" id="page">SHINE UP</a></div>
+            </div>
+             <article>
+                <h1>WE CREATE SUPERSTARS.</h1>
+                <div id='mission'>
+                     <h3>GROW YOUR MUSICAL CAREER</h3>
+                     <p>One morning, when Gregor Samsa woke from troubled dreams, 
+                         he found himself transformed in his bed into a horrible vermin.
+                         
+                         <br>The bedding was hardly able to cover it and seemed ready to slide 
+                        off any moment.</p>
+                        <a href="index/signup.html"><button>Sign Up Now</button></a>
                 </div>
-
-            <!-- main image area -->
-            <section> 
-            <img src="" alt="Singer">
-
-            <h1>WE CREATE SUPERSTARS</h1>
-                <article>
-                    <h4>GROW YOUR MUSICAL CAREER</h4>
-                    <p>Chocolate bonbon carrot cake toffee carrot cake ice cream. Cupcake marshmallow jelly beans sugar plum soufflé macaroon sesame snaps chupa chups. Chocolate muffin marshmallow tootsie roll topping dragée pudding muffin.</p>
-                </article>
-
-                <button>Sign Up Now</button>
-            </section> 
+             </article>
+        </body>
     </div>  
-        <!-- main image --> 
         <footer class="main-footer">
-            <span>&copy;2018 Crashing Fish KAMP</span>
+            <span><strong>&copy;2018 Crashing Fish KAMP</strong></span>
         </footer>
-    </body>
 </html>
