--- a/index/tutorials.html
+++ b/index/tutorials.html
@@ -5,12 +5,21 @@
   <meta charset="UTF-8">
   <title>TUTORIALS</title>
 </head>
-<body>
-    <h1>TUTORIALS</h1>
-    <div id="tutorials"> 
-
-
-    </div>
-    <script src="../js/tutorials.js"></script>
-</body>
+  <div class="sticky"></div>
+    <body>
+        <div class="container">
+            <div class="item-1 item"><strong><a href="../index.html" id="home">STAR FACTOR</a></strong></div>
+            <div class="item-2 item"><a href="community.html" id="page">COMMUNITY</a></div>
+            <div class="item-3 item"><a href="tutorials.html" id="page">TUTORIALS</a></div>
+            <div class="item-4 item"><a href="contact.html" id="page">CONTACT US</a></div>
+            <div class="item-5 item">SHINE IN</div>
+        </div>
+        <h2>TUTORIALS.</h2>
+          <div id="tutorials"></div>
+        <script src="../js/tutorials.js"></script>
+    </body>
+</div>
+<footer class="main-footer">
+  <span><strong>&copy;2018 Crashing Fish KAMP</strong></span>
+</footer>
 </html>
