pre demo tweaks

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
                 <h1>WE CREATE SUPERSTARS.</h1>
                 <div id='mission'>
                      <h3>GROW YOUR MUSICAL CAREER</h3>
-                     <p>One morning, when Gregor Samsa woke from troubled dreams, 
-                         he found himself transformed in his bed into a horrible vermin.
+                     <p>Love singing? Dancing? Performing? STAR FACTOR is your best friend.</p> 
+
+                        <p>Our lovely constructive community and host of professional resources is just
+                        the thing you need you to take your passion to the next level.</p>
                          
-                         <br>The bedding was hardly able to cover it and seemed ready to slide 
-                        off any moment.</p>
+                         <p>Dont keep the world waiting. Shine Up, to Shine On!</p>
                         <a href="index/signup.html"><button>Sign Up Now</button></a>
                 </div>
              </article>
