--- a/index/artist.html
+++ b/index/artist.html
@@ -13,9 +13,9 @@
         <div class="container">
             <div class="item-1 item"><a href="../index.html" id="home"><strong>STAR FACTOR</a></strong></div>
             <div class="item-2 item"><a href="community.html" id="page">COMMUNITY</a></div>
-            <div class="item-3 item"><a href="tutorials.css" id="page">TUTORIALS</a></div>
+            <div class="item-3 item"><a href="tutorials.html" id="page">TUTORIALS</a></div>
             <div class="item-4 item"><a href="contact.html" id="page">CONTACT US</a></div>
-            <div class="item-5 item">SHINE OUT</div>
+            <div class="item-5 item"><a href="../index.html" id="page">SHINE OUT</a></div>
         </div>
 
         
