--- a/index/community.html
+++ b/index/community.html
@@ -15,7 +15,7 @@
                     <div class="item-2 item"><a href="community.html" id="page">COMMUNITY</a></div>
                     <div class="item-3 item"><a href="tutorials.html" id="page">TUTORIALS</a></div>
                     <div class="item-4 item"><a href="contact.html" id="page">CONTACT US</a></div>
-                    <div class="item-5 item"><a href="index/artist.html" id="page">SHINE IN</a></div>
+                    <div class="item-5 item"><a href="artist.html" id="page">SHINE IN</a></div>
             </div>
 
             <header>
