--- a/index/tutorials.html
+++ b/index/tutorials.html
@@ -12,7 +12,7 @@
             <div class="item-2 item"><a href="community.html" id="page">COMMUNITY</a></div>
             <div class="item-3 item"><a href="tutorials.html" id="page">TUTORIALS</a></div>
             <div class="item-4 item"><a href="contact.html" id="page">CONTACT US</a></div>
-            <div class="item-5 item">SHINE IN</div>
+            <div class="item-5 item"><a href="artist.html">SHINE IN</a></div>
         </div>
         <h2>TUTORIALS.</h2>
           <div id="tutorials"></div>
